# file_modifier

./: CMakeLists.txt  alert_dialog.cpp  alert_dialog.h  creator.cpp  creator.h  current_settings.cpp  current_settings.h  dialog.cpp  dialog.h  directory_group.cpp  directory_group.h  graphics.cpp  graphics.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  modificator.cpp  modificator.h
